LIST OF CHANGES
---------------

release 57.14.0
 - switch to sample control flag when determining eligibility for
   pp data archival

release 57.13.1
 - made run deletion policy consistent wiht a change to eligibility
   for iRODS archival (see commit 457da605c9f7fe97f82954ffe7155ca96e034753),
   which makes non-products (tag zero and spiked PhiX tag) not being
   archived to iRODS if none of the lane products are archived to iRODS

release 57.13.0
 - a new script - npg_upload2climb - to perform the upload, which is
   specified in the definition generated by the pp_archiver function
 - extended the spiked phix i5 tag (SPIKED_PHIX_TAG2) to 10-bases
 - required arguments are passed to the npg_upload2climb script when
   the pp_archiver function job description is generated
 - the pp_archiver function is added to the archival pipeline graph
 - archival to CLIMB is skipped for samples with withdrawn consent
 - library type and primer panel are added to the CLIMB archival
   manifest
 - simplification of dependencies representation for LSF jobs in private
   functions of the LSF executor class, which fixes the little-understood
   problem of disappering dependencies for seq_alignment jobs when they
   are split between multiple LSF job arrays

release 57.12.0
 - a new function definition class npg_pipeline::function::pp_archiver,
   implementing two new pipeline functions - 'pp_archiver' and 
   'pp_archiver_manifest'

release 57.11.0
 - a generic API for sequencing data metadata upload to a third party
   and a script for uploading metadata for Illumina
   sequencing platform
 - product-specific primer panel bed file in seq_alignment
 - simple robo QC step added straight after running the ncov2019-artic-nf
   portable pipeline; the step creates a utility (user) QC outcome

release 57.10.0
 - new function, stage2pp, for running portable pipelines straight
   after stage1 in parallel to seq_alignment

release 57.9.0