@@ -12,7 +12,9 @@ my $dir = tempdir( CLEANUP => 1);
 
 use_ok('npg_pipeline::function::stage2pp');
 
-for my $name (qw/npg_simple_robo4artic nextflow/) {
+for my $name (qw/npg_autoqc_generic4artic
+                 npg_simple_robo4artic
+                 nextflow/) {
   my $exec = join q[/], $dir, $name;
   open my $fh1, '>', $exec or die 'failed to open file for writing';
   print $fh1 'echo "$name mock"' or warn 'failed to print';
@@ -111,7 +113,7 @@ subtest 'error on missing data in LIMS' => sub {
 };
 
 subtest 'definition generation' => sub {
-  plan tests => 16;
+  plan tests => 18;
 
   local $ENV{NPG_CACHED_SAMPLESHEET_FILE} = q[t/data/samplesheet_33990.csv];
   my $nf_dir = q[t/data/portable_pipelines/ncov2019-artic-nf/cf01166c42a];
@@ -146,7 +148,9 @@ subtest 'definition generation' => sub {
            ' && ' .
            "( ([ -f $summary_file ] && echo 'Found $summary_file') || (echo 'Not found $summary_file' && /bin/false) )" .
            ' && ' .
-           "(cat $summary_file | $dir/npg_simple_robo4artic $archive_path/plex1/qc)";
+           "(cat $summary_file | $dir/npg_simple_robo4artic $archive_path/plex1/qc)" .
+           ' && ' .
+           "(cat $summary_file | $dir/npg_autoqc_generic4artic --qc_out $archive_path/plex1/qc)";
   my $c0 = $c;
   is ($ds->[0]->command, $c, 'correct command for plex 1');
   is ($ds->[0]->job_name, 'stage2pp_ncov2cf011_26291', 'job name');
@@ -158,7 +162,9 @@ subtest 'definition generation' => sub {
            ' && ' .
            "( ([ -f $summary_file ] && echo 'Found $summary_file') || (echo 'Not found $summary_file' && /bin/false) )" .
            ' && ' .
-           "(cat $summary_file | $dir/npg_simple_robo4artic $archive_path/plex2/qc)";
+           "(cat $summary_file | $dir/npg_simple_robo4artic $archive_path/plex2/qc)" .
+           ' && ' .
+           "(cat $summary_file | $dir/npg_autoqc_generic4artic --qc_out $archive_path/plex2/qc)";
   is ($ds->[1]->command, $c, 'correct command for plex 2');
 
   $c_copy = $command;
@@ -168,8 +174,32 @@ subtest 'definition generation' => sub {
            ' && ' .
            "( ([ -f $summary_file ] && echo 'Found $summary_file') || (echo 'Not found $summary_file' && /bin/false) )" .
            ' && ' .
-           "(cat $summary_file | $dir/npg_simple_robo4artic $archive_path/plex3/qc)";
+           "(cat $summary_file | $dir/npg_simple_robo4artic $archive_path/plex3/qc)" .
+           ' && ' .
+           "(cat $summary_file | $dir/npg_autoqc_generic4artic --qc_out $archive_path/plex3/qc)";
   is ($ds->[2]->command, $c, 'correct command for plex 3');
+
+  $ppd = npg_pipeline::function::stage2pp->new(
+    product_conf_file_path => $product_conf,
+    archive_path           => $archive_path,
+    runfolder_path         => $runfolder_path,
+    id_run                 => 26291,
+    merge_lanes            => 0,
+    timestamp              => $timestamp,
+    repository             => $dir);
+  $ds = $ppd->create;
+  is (scalar @{$ds}, 6, '6 definitions are returned');
+  my $out_dir = qq[$pp_archive_path/lane1/plex1/ncov2019_artic_nf/cf01166c42a];
+  $summary_file = join q[/], $out_dir, '26291.qc.csv';
+  $c  = "$command --directory $no_archive_path/lane1/plex1/stage1 --outdir $out_dir)" .
+        ' && ' .
+        "( ([ -f $summary_file ] && echo 'Found $summary_file') || (echo 'Not found $summary_file' && /bin/false) )" .
+        ' && ' .
+        "(cat $summary_file | $dir/npg_simple_robo4artic $archive_path/lane1/plex1/qc)" .
+        ' && ' .
+        "(cat $summary_file | $dir/npg_autoqc_generic4artic --qc_out $archive_path/lane1/plex1/qc " .
+        "--rpt_list 26291:1:1 --tm_json_file $archive_path/lane1/qc/26291_1.tag_metrics.json)";
+  is ($ds->[0]->command, $c, 'correct command for unmerged plex 1');
 
   $ppd = npg_pipeline::function::stage2pp->new(
     product_conf_file_path => qq[$repo_dir/../v.3/product_release_two_pps.yml],
@@ -178,7 +208,6 @@ subtest 'definition generation' => sub {
     id_run                 => 26291,
     timestamp              => $timestamp,
     repository             => $dir);
-
   $ds = $ppd->create;
   is (scalar @{$ds}, 6, '6 definitions are returned');
   is ($ds->[0]->command, $c0, 'correct command for plex 1');
